// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of Access Point Selection of provider and connector 1`] = `
<div>
  <div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          Select Cloud Provider
        </h2>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providerCardsContainer"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-white"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="9"
                    viewBox="0 0 16 16"
                    width="9"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="text-align: center;"
                >
                  AWS
                </p>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="text-align: center;"
                >
                  Azure
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
          >
            ce.co.accessPoint.select.connector
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
              data-testid="cr-field-cloudConnector"
              style="width: 400px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <span
                  class="placeholder"
                >
                  ce.co.accessPoint.select.account
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-caret-down StyledProps--main"
                icon="caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-down
                  </desc>
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main continueCta StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Continue
        </span>
      </button>
    </div>
  </div>
  )
</div>
`;

exports[`Creation of Access Point render access point creation dialog 1`] = `
<div>
  <div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main mainContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
        >
          Select Cloud Provider
        </h2>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providerCardsContainer"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="text-align: center;"
                >
                  AWS
                </p>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="text-align: center;"
                >
                  Azure
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main continueCta StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Continue
        </span>
      </button>
    </div>
  </div>
  )
</div>
`;
